@@ -1,3 +1,6 @@
+#2007-01-21 : core    : fixed max/min_fill_values
+#           :         : fixed sort (as method and function)
+#2007-01-18 : core    : fixed default filling values for unsigned int_.
 #2007-01-16 : extras  : new function : `mediff1d`
 #2007-01-15 : mrecords: new method: `addfield`
 #           : core    : Force the mask of a masked array `x` to be copied w/...
